Finish order sync with complete cycle.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,8 @@
 
 # GENERAL CONFIGURATION
 
-store.prefix = "Lightspeed-POS-"
+store.id = "Lightspeed-POS"
+store.id = ${?LS_CONNECTOR_STORE_ID}
 
 
 # LIGHTSPEED CONFIGURATION
