--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,6 +4,9 @@
 store.id = "Lightspeed-POS"
 store.id = ${?LS_CONNECTOR_STORE_ID}
 
+sync.interval.orders = 10
+sync.interval.orders = ${?LS_CONNECTOR_SYNC_INTERVAL_ORDERS}
+
 
 # LIGHTSPEED CONFIGURATION
 
