First draft intent.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,6 +7,12 @@ store.id = ${?LS_CONNECTOR_STORE_ID}
 sync.interval.orders = 10
 sync.interval.orders = ${?LS_CONNECTOR_SYNC_INTERVAL_ORDERS}
 
+sync.interval.products = 60
+sync.interval.products = ${?LS_CONNECTOR_SYNC_INTERVAL_PRODUCTS}
+
+sync.since = "2015-03-19T01:32:06.310836"
+sync.since = ${?LS_CONNECTOR_SYNC_SINCE}
+
 
 # LIGHTSPEED CONFIGURATION
 
