Implement customer export.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,6 +10,9 @@ sync.interval.orders = ${?LS_CONNECTOR_SYNC_INTERVAL_ORDERS}
 sync.interval.products = 60
 sync.interval.products = ${?LS_CONNECTOR_SYNC_INTERVAL_PRODUCTS}
 
+sync.interval.customers = 240
+sync.interval.customers = ${?LS_CONNECTOR_SYNC_INTERVAL_CUSTOMERS}
+
 #sync.since = "2015-03-23T01:32:06.310836"
 sync.since = ${?LS_CONNECTOR_SYNC_SINCE}
 
