--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,18 +1,23 @@
 
 # GENERAL CONFIGURATION
 
+# Store ID, to identify the point of sale where the orders took place.
 store.id = "Lightspeed-POS"
 store.id = ${?LS_CONNECTOR_STORE_ID}
 
+# Synchronization interval for orders.
 sync.interval.orders = 10
 sync.interval.orders = ${?LS_CONNECTOR_SYNC_INTERVAL_ORDERS}
 
+# Synchronization interval for products.
 sync.interval.products = 60
 sync.interval.products = ${?LS_CONNECTOR_SYNC_INTERVAL_PRODUCTS}
 
+# Synchronization interval for customers.
 sync.interval.customers = 30
 sync.interval.customers = ${?LS_CONNECTOR_SYNC_INTERVAL_CUSTOMERS}
 
+# A timestamp limit to speed up synchronization, so that older documents are not processed.
 #sync.since = "2015-03-23T01:32:06.310836"
 sync.since = ${?LS_CONNECTOR_SYNC_SINCE}
 
@@ -36,7 +41,7 @@ lightspeed.password = ${?LS_CONNECTOR_LIGHTSPEED_PASSWORD}
 
 
 
-# SPHERE CONFIGURATION
+# SPHERE.IO CONFIGURATION
 
 sphere.project.key = "your SPHERE project key"
 sphere.project.key = ${?LS_CONNECTOR_SPHERE_PROJECT_KEY}
