--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,15 +5,15 @@
 store.id = "Lightspeed-POS"
 store.id = ${?LS_CONNECTOR_STORE_ID}
 
-# Synchronization interval for orders.
+# Synchronization interval in seconds for orders.
 sync.interval.orders = 10
 sync.interval.orders = ${?LS_CONNECTOR_SYNC_INTERVAL_ORDERS}
 
-# Synchronization interval for products.
+# Synchronization interval in seconds for products.
 sync.interval.products = 60
 sync.interval.products = ${?LS_CONNECTOR_SYNC_INTERVAL_PRODUCTS}
 
-# Synchronization interval for customers.
+# Synchronization interval in seconds for customers.
 sync.interval.customers = 30
 sync.interval.customers = ${?LS_CONNECTOR_SYNC_INTERVAL_CUSTOMERS}
 
